# outdoor-terrain

./: LICENSE  README.md  outdoor-terrain.cabal  stack.yaml
shaders/: lighted-box.frag  lighted-box.vert  skybox.frag  skybox.vert  sunlight.frag  sunlight.vert  terrain.frag  terrain.vert
src/: Camera.hs  DummyGen.hs  Entity.hs  EventLoop.hs  Helpers.hs  Input.hs  Main.hs  Options.hs  RenderLoop.hs  RenderState.hs  SkyBox.hs  SunLight.hs  Terrain.hs  TerrainGen.hs
