name:                outdoor-terrain
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/outdoor-terrain#readme
license:             BSD3
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable outdoor-terrain-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       RenderLoop
                       Entity
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.7 && < 5
                     , either
                     , GLFW-b
                     , light-weight-opengl
                     , linear
